# bl4-loot-treadmill

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.ps1  generate_boss_pools.ps1
.github/workflows/: tests.yml
LootTreadmill/: __init__.py  boss_pools.py  profiles.py  pyproject.toml
tests/: test_profiles.py
